src/scss/components/_member.scss
.members {
  scroll-snap-type: x mandatory;
  -webkit-overflow-scrolling: touch;
  overflow-x: auto;
  max-width: 100%;
  margin: 0;
  padding: 2rem 0 6rem;
  font-size: 10px;
  list-style: none;
  white-space: nowrap;

  @include media($screen-lg) {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 6rem 0 10rem 0;
  }
}

.member {
  display: inline-block;
  scroll-snap-align: center;
  opacity: 0;
  position: relative;
  // overflow: hidden;
  flex-basis: auto;
  width: 33.6rem;
  min-height: 45em;
  margin: 0 2rem 0 0;
  padding: 7em 3em 9em;
  font-size: 1rem;
  list-style: none;
  background: $cl-white;
  box-shadow: 0 2rem 3.5rem 0 rgba($cl-black, .12);
  border-radius: .8rem;
  outline: none;
  cursor: pointer;
  user-select: none;
  transform: scale(0);
  transition: {
    property: opacity, transform;
    duration: 500ms, 300ms;
    delay: 0ms;
    timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
  };

  .section.is-active & {
    opacity: 1;
    transform: scale(1);
  }

  .members & {

    &:nth-child(1) {
      margin-left: 2rem;
    }

    &:nth-child(1),
    &:nth-child(5) {

      @include media($screen-lg) {
        width: 19rem;
        font-size: 5.5px;
        transition-duration: 500ms;
        transition-delay: 600ms, 600ms, 600ms;
        transform: scale(0);

        .section.is-active & {
          transform: scale(1);
          transition-delay: 600ms, 0ms, 0ms;

          &:hover,
          &:focus,
          &:focus-within {
            z-index: 2;
            transform: scale(1.765);
          }
        }

        .member__anchor {
          padding: 16px;
          font-size: 9px;
        }
      }
    }

    &:nth-child(2),
    &:nth-child(4) {

      @include media($screen-lg) {
        width: 25.5rem;
        font-size: 7.75px;
        transition-duration: 500ms;
        transition-delay: 300ms, 0ms, 0ms;
        transform: scale(0);

        .section.is-active & {
          transform: scale(1);

          &:hover,
          &:focus,
          &:focus-within {
            z-index: 2;
            transform: scale(1.34299);
          }
        }

        .member__anchor {
          padding: 22px;
          font-size: 12px;
        }
      }
    }

    &:nth-child(5) {
      margin-right: 2rem;
    }
  }

  &::after {
    content: '';
    box-sizing: border-box;
    position: absolute;
    top: 0;
    left: 0;
    display: block;
    width: 100%;
    height: 100%;
    border: .2em solid $cl-primary;
    border-radius: .8rem;
    opacity: 0;
    transition: opacity 200ms;
    pointer-events: none;
  }

  &.is-selected {

    &::after {
      opacity: 1;
    }
  }
}

.member--empty {
  pointer-events: none;

  .member__avatar::before,
  .member__avatar::after {
    display: none;
  }
}

.member__avatar {
  position: absolute;
  top: 0;
  right: 0;
  width: 80%;

  &:before {
    content: '';
    opacity: 0;
    z-index: 2;
    position: absolute;
    top: 0;
    right: 0;
    width: 80%;
    height: 100%;
    background: url('images/add-to-team.svg') no-repeat calc(100% - 2em) 2em/12.4em;
    transition: opacity 300ms;
  }

  &:after {
    content: '';
    opacity: 0;
    z-index: 1;
    position: absolute;
    top: 0;
    right: 0;
    width: 80%;
    height: 100%;
    mask-image: url('images/avatar-mask.svg');
    mask-repeat: space;
    mask-size: contain;
    mask-position: right top;
    background: rgba($cl-tertiary, .8);
    transition: opacity 300ms;
  }

  .member:hover &:before,
  .member:hover &:after {
    opacity: 1;
  }

  .member.is-selected & {

    &:before {
      opacity: 1;
      background: url('images/selected-member.png') no-repeat calc(100% - 2em) 2em/13em;
    }

    &:after {
      opacity: 1;
      background: rgba($cl-primary, .8);
    }
  }

  img {
    float: right;
    width: 80%;
    height: auto;
    mask-image: url('images/avatar-mask.svg');
    mask-repeat: space;
    mask-size: contain;
    mask-position: right top;
  }
}

.member__name {
  color: $cl-primary;
  font: {
    family: $font-body;
    size: 2.8em;
    weight: 900;
  };
  margin-bottom: .714285714em; // 20px
}

.member__title {
  margin: 0;
  color: $cl-primary;
  font: {
    family: $font-body;
    size: 1.8em;
    weight: 700;
  }
}

.member__tags {
  margin: 0 0 1.875em; // 30px
  color: $cl-quinary;
  font: {
    family: $font-body;
    size: 1.6em;
    weight: 500;
  }
}

.member__description {
  padding-right: 2em;
  color: $cl-quinary;
  font: {
    size: 1.6em;
    weight: 300;
  };
  line-height: 1.43;
  white-space: normal;
}

.member__anchor {
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  display: flex;
  align-items: center;
  font-size: 16px;
  padding: 30px;
  color: $cl-secondary;
  box-shadow: 0 0 0 0 $cl-secondary inset;
  outline: none;
  transition: {
    property: color, box-shadow;
    duration: 400ms;
    timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
  }

  &:hover,
  &:focus,
  &:focus-within {
    color: $cl-white;
    box-shadow: 0 -5em 0 0 $cl-secondary inset;

    svg path {
      fill: $cl-white;
    }
  }

  svg {
    width: 1em;
    height: auto;
    margin-left: auto;

    path {
      transition: fill 400ms;
    }
  }
}

